--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
 body{
     background-color: antiquewhite;
 }
+
+#api-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 5%;
+    border-radius: 5%;
+    margin: 5%;
+    background-color: darkgrey;
+}
