Changed color on flight info, still cant change color for search resutls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,8 @@ main section #input {
   font-size: 28px;
 }
 
-#results {
-  color: azure;
-  font-size: large;
+#resutls {
+  color:linen
 }
 
 #output1 {
@@ -71,7 +70,7 @@ main section #input {
   color: lightsteelblue
 }
 
-#flightinfo{
+#flightInfo{
   color:lightyellow
 }
 
